--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -54,9 +54,9 @@
             </select2>
           </th>
           <th class="text-right" scope="">
-            <input currencyMask [options]="{ thousands: ',', decimal: '.',allowNegative: false }"
+            <input currencyMask [options]="{ thousands: ',', decimal: '.',allowNegative: false, precision: 4 }"
               formControlName="tipo_cambio" type="text" name="importe" maxlength="20" [(ngModel)]="tipo_cambio"
-              class="form-control" style="width: 70px !important;" (keyup)="calcularImporte()">
+              class="form-control" (keyup)="calcularImporte()">
           </th>
           <th scope="">
             <select2 [data]=" lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
