[add] bloquear moneda cuando es mxn

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -91,7 +91,8 @@
     <!-- Formulario concepto Extranjero -->
     <div class="row">
       <app-row-concepto-extranjero class="col-12" (onAgregarConcepto)="addConcepto($event)"
-        [cuenta_seleccionada]="cuenta_seleccionada" [lista_cuentas]="lista_cuentas" [lista_monedas]="lista_monedas">
+        [comprobacion_header]="comprobacion_header" [cuenta_seleccionada]="cuenta_seleccionada"
+        [lista_cuentas]="lista_cuentas" [lista_monedas]="lista_monedas">
       </app-row-concepto-extranjero>
     </div>
     <!-- Fin del Formulario concepto Extranjero -->
