--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -108,7 +108,7 @@
                           <th scope="col">Valor Unitario</th>
                           <th scope="col">Cantidad</th>
                           <th scope="col">Tipo de Cambio</th>
-                          <th scope="col">Importe</th>
+                          <th scope="col">Importe Original </th>
                           <th style="width: 250px;" scope="col">Concepto</th>
                           <th scope="col">Monto a Reembolsar (MXN)</th>
                           <th *ngIf="comprobante.xml" scope="col">Impuestos</th>
