--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -37,10 +37,10 @@
 
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="cnetro_costos">Centro de Costos <span class="requerido">*</span> </label>
-        <select class="form-control" formControlName="centro_costos" name="corporativo"
+        <select class="form-control" formControlName="centro_costos" name="centro_costos"
           [(ngModel)]="header_comprobante.identificador_cc">
-          <option *ngFor="let item of centros_costos_dispobles"
-            [attr.selected]="item.identificador ==  header_comprobante.identificador_cc ? true : null ">{{
+          <option *ngFor="let item of centros_costos_dispobles" [value]="item.identificador_cc"
+            [selected]="item.identificador == header_comprobante.identificador_cc">{{
             item.centro_consumo }}</option>
         </select>
       </div>
