--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -119,7 +119,7 @@
 <!-- Modal Conceptos Comprobantes -->
 <app-modal-conceptos-comprobantes #modalConceptos [comprobante]="comprobante"
   (onGuardarConceptos)="onActualizarComprobantes($event)" [lista_cuentas]="lista_cuentas"
-  [lista_forma_pago]="lista_forma_pago" [aprobacion_parcial]="aprobacion_parcial">
+  [lista_forma_pago]="lista_forma_pago" [aprobacion_parcial]="aprobacion_parcial" [tipo_gasto]="tipo_gasto">
 </app-modal-conceptos-comprobantes>
 
 <app-modal-agregar-anexo [uuid]="uuid" [identificador_corporativo]="usuario.identificador_corporativo">
