--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -20,7 +20,7 @@
           <th style="width: 150px;" scope="col">Importe</th>
           <th scope="col">Moneda</th>
           <th scope="col">Tipo de Cambio</th>
-          <th style="width: 250px;" scope="col">Concepto<span class="text-danger">*</span></th>
+          <th *ngIf="tipo_gasto != 11" style="width: 250px;" scope="col">Concepto<span class="text-danger">*</span></th>
           <th *ngIf="requerir_numero_dias" scope="col">Número Dias<span class="text-danger">*</span></th>
           <th style="width: 120px;" scope="col">Monto a Reembolsar <span class="text-danger">*</span> (MXN) </th>
           <!-- <th scope="col">Comprobante Fiscal</th> -->
@@ -59,10 +59,10 @@
               formControlName="tipo_cambio" type="text" name="importe" maxlength="20" [(ngModel)]="tipo_cambio"
               class="form-control" (keyup)="calcularImporte()">
           </th>
-          <th scope="">
+          <th *ngIf="tipo_gasto != 11" scope="">
             <select2 [data]=" lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
               [value]="cuenta_seleccionada" (valueChanged)="onChangeConcepto($event)" name="concepto" id="concepto"
-              [disabled]="concepto? true : false">
+              [disabled]="(concepto)? true : false">
             </select2>
           </th>
           <th *ngIf="requerir_numero_dias" class="text-right" scope="">
