--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -17,7 +17,7 @@
           <th scope="col">Valor Unitario</th>
           <th scope="col">Cantidad</th>
           <th scope="col">Importe</th>
-          <th style="width: 250px;" scope="col">Concepto</th>
+          <th *ngIf="tipo_gasto !== 11 " style="width: 250px;" scope="col">Concepto</th>
           <th *ngIf="requiere_numero_dias" scope="col">Numero Dias</th>
           <th scope="col">Monto a Reembolsar (MXN) </th>
           <th scope="col">Comprobante Fiscal</th>
@@ -42,7 +42,7 @@
           <th class="text-right" scope="">
             {{ conceptos[i].importe | currency: '$' }}
           </th>
-          <th scope="">
+          <th *ngIf="tipo_gasto !== 11 " scope="">
             <select2 [data]="lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
               (valueChanged)="onChangeConcepto($event, i)" name="concepto" id="concepto">
             </select2>
