[add] actualizacion montos prestacion nacional

--- a/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
@@ -30,7 +30,8 @@
   (enviarArchivo)="setArchivo($event)" [lista_cuentas]="lista_cuentas" (enviarConceptos)="enviarConceptos($event)"
   (enviarDetalleFactura)="setDetalles($event)" (setTimpoCambio)="setTipoCambio($event)"
   (onAgregarComprobante)="agregarComprobante($event)" [tipo_gasto]="TIPO_GASTO"
-  (calcularMontoDisponible)='obtenerSaldoDisponible($event)' [porcentaje_reembolso]="totales.porcentaje_reembolso">
+  (calcularMontoDisponible)='obtenerSaldoDisponible($event)' (onConceptoSelected)="onConceptoSelected($event)"
+  [porcentaje_reembolso]="totales.porcentaje_reembolso">
 </app-carga-comprobante-nacional>
 
 <app-carga-comprobante-extranjero *ngIf="tipo_comprobante === 'internacional'"
