--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -75,7 +75,8 @@
     <div class="row">
       <app-row-concepto-extranjero class="col-12" (onAgregarConcepto)="addConcepto($event)"
         [comprobacion_header]="comprobacion_header" [cuenta_seleccionada]="cuenta_seleccionada"
-        [lista_cuentas]="lista_cuentas" [lista_monedas]="lista_monedas" [tipo_gasto]="tipo_gasto">
+        [lista_cuentas]="lista_cuentas" [lista_monedas]="lista_monedas" [tipo_gasto]="tipo_gasto"
+        [porcentaje_reembolso]="porcentaje_reembolso">
       </app-row-concepto-extranjero>
     </div>
     <!-- Fin del Formulario concepto Extranjero -->
